@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PDL
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.80 2009/01/01 18:54:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.81 2009/04/21 18:08:03 tove Exp $
+
+  21 Apr 2009; Torsten Veller <tove@gentoo.org> PDL-2.4.4.ebuild:
+  Fix automagic dependency on fftw. Thanks to Sébastien Fabbro (#266845)
 
   01 Jan 2009; Raúl Porcel <armin76@gentoo.org> PDL-2.4.3-r1.ebuild,
   PDL-2.4.4.ebuild:
